# RedNote2TG

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  keyword_rules.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  roadmap.md
.github/workflows/: build.yml
config/: config.example.yaml  item_rules.example.yaml  keyword_rules.example.yaml  people_rules.example.yaml
openspec/changes/add-rednote-telegram-publisher/: design.md  proposal.md  tasks.md
openspec/changes/add-rednote-telegram-publisher/specs/scheduled-note-forwarding/: spec.md
openspec/changes/add-rednote-telegram-publisher/specs/telegram-channel-publishing/: spec.md
openspec/changes/add-rednote-telegram-publisher/specs/xhs-note-ingestion/: spec.md
openspec/changes/archive/2026-07-02-dynamic-keyword-query-rules/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-23-harden-xhs-pc-session/: design.md  proposal.md  tasks.md
openspec/specs/dynamic-keyword-query-generation/: spec.md
openspec/specs/xhs-client-lifecycle/: spec.md
rednote2tg/: __init__.py  __main__.py  config.py  db.py  keyword_rules.py  logging.py  main.py  media.py  models.py  scheduler.py  telegram_publisher.py  xhs_source.py
tests/: test_config_models.py  test_db.py  test_integration_dry_run.py  test_keyword_rules.py  test_logging.py  test_main.py  test_media.py  test_scheduler.py  test_telegram_publisher.py  test_xhs_source.py
tests/debug/: keyword_gen.py  run_once_live.py  test_keyword_generator.py
(+2 files in other folders)
